builtin-resources/gateway-api/httproute-gke.yaml
# Separation of the rules and the main gateway to allow for better organization
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gke
spec:
  parentRefs:
    - name: gke # name of the gateway which this route is a part of
  hostnames:
    - "gateway-example-gke.com" # Replace with your domain
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: / # Match all traffic
      backendRefs:
        # GKE supports only nodeport as the gateway provisioned falls outside of the cluster. However if we use 3rd party implementations such as kong for the gateway, we can have the gateway be within the
        # cluster itself and can route traffic to clusterip services instead of nodeport.
        - name: nginx-nodeport
          kind: Service
          port: 80
